スクロールでタップが離れたときに一定位置にバネアニメーション

--- a/ContainerViewTest/Base.lproj/Main.storyboard
+++ b/ContainerViewTest/Base.lproj/Main.storyboard
@@ -21,40 +21,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0AC-zc-r7C">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <subviews>
-                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9JO-nm-as1">
-                                        <rect key="frame" x="0.0" y="84" width="375" height="583"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="583" id="j5u-FR-FTQ"/>
-                                        </constraints>
-                                        <connections>
-                                            <segue destination="S0r-bA-z5s" kind="embed" id="Sda-nn-wd7"/>
-                                        </connections>
-                                    </containerView>
-                                </subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9JO-nm-as1">
+                                <rect key="frame" x="0.0" y="84" width="375" height="583"/>
                                 <constraints>
-                                    <constraint firstItem="9JO-nm-as1" firstAttribute="leading" secondItem="0AC-zc-r7C" secondAttribute="leading" id="B1f-op-F3X"/>
-                                    <constraint firstItem="9JO-nm-as1" firstAttribute="top" secondItem="0AC-zc-r7C" secondAttribute="top" constant="84" id="EJp-BC-GE0"/>
-                                    <constraint firstAttribute="trailing" secondItem="9JO-nm-as1" secondAttribute="trailing" id="Tu0-UZ-PIX"/>
-                                    <constraint firstItem="9JO-nm-as1" firstAttribute="centerX" secondItem="0AC-zc-r7C" secondAttribute="centerX" id="USp-xW-bNy"/>
-                                    <constraint firstAttribute="bottom" secondItem="9JO-nm-as1" secondAttribute="bottom" id="lEp-zZ-D2f"/>
+                                    <constraint firstAttribute="height" constant="583" id="j5u-FR-FTQ"/>
                                 </constraints>
-                            </scrollView>
+                                <connections>
+                                    <segue destination="S0r-bA-z5s" kind="embed" id="Sda-nn-wd7"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="0AC-zc-r7C" secondAttribute="trailing" id="4Fx-tc-GTz"/>
-                            <constraint firstItem="0AC-zc-r7C" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="9o7-ZZ-5Hv"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0AC-zc-r7C" secondAttribute="bottom" id="V2r-fT-fs3"/>
-                            <constraint firstItem="0AC-zc-r7C" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="rSp-eQ-PcG"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="9JO-nm-as1" secondAttribute="bottom" id="O1d-nH-hEn"/>
+                            <constraint firstAttribute="trailing" secondItem="9JO-nm-as1" secondAttribute="trailing" id="QEW-UX-BqU"/>
+                            <constraint firstItem="9JO-nm-as1" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="64" id="kiR-AZ-7wr"/>
+                            <constraint firstItem="9JO-nm-as1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="uQH-4N-mmv"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="containerView" destination="9JO-nm-as1" id="lKF-Ut-8x4"/>
                         <outlet property="containerViewHeight" destination="j5u-FR-FTQ" id="gbz-Dc-6lY"/>
-                        <outlet property="scrollView" destination="0AC-zc-r7C" id="0oE-jM-4Kz"/>
+                        <outlet property="containerViewTopMargin" destination="kiR-AZ-7wr" id="axf-Xa-73f"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -89,7 +77,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0MS-5a-fPL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137" y="635"/>
+            <point key="canvasLocation" x="137" y="835"/>
         </scene>
     </scenes>
 </document>
