スワイプ方向と指が離れる位置によって3状態にcontainerviewを移動

--- a/ContainerViewTest/Base.lproj/Main.storyboard
+++ b/ContainerViewTest/Base.lproj/Main.storyboard
@@ -21,10 +21,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9JO-nm-as1">
-                                <rect key="frame" x="0.0" y="84" width="375" height="583"/>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j4p-gV-snJ">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <connections>
+                                    <segue destination="m8l-mZ-Vvi" kind="embed" id="KaG-45-p4Y"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9JO-nm-as1">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="583" id="j5u-FR-FTQ"/>
+                                    <constraint firstAttribute="height" constant="667" id="si0-ec-D0K"/>
                                 </constraints>
                                 <connections>
                                     <segue destination="S0r-bA-z5s" kind="embed" id="Sda-nn-wd7"/>
@@ -33,21 +39,23 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="9JO-nm-as1" secondAttribute="bottom" id="O1d-nH-hEn"/>
                             <constraint firstAttribute="trailing" secondItem="9JO-nm-as1" secondAttribute="trailing" id="QEW-UX-BqU"/>
-                            <constraint firstItem="9JO-nm-as1" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="64" id="kiR-AZ-7wr"/>
+                            <constraint firstItem="j4p-gV-snJ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="eXS-cN-Cfa"/>
+                            <constraint firstAttribute="trailing" secondItem="j4p-gV-snJ" secondAttribute="trailing" id="en6-Yc-Put"/>
+                            <constraint firstItem="j4p-gV-snJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="fS3-1c-aNw"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="j4p-gV-snJ" secondAttribute="bottom" id="fmC-hi-MSu"/>
+                            <constraint firstItem="9JO-nm-as1" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="kiR-AZ-7wr"/>
                             <constraint firstItem="9JO-nm-as1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="uQH-4N-mmv"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="containerView" destination="9JO-nm-as1" id="lKF-Ut-8x4"/>
-                        <outlet property="containerViewHeight" destination="j5u-FR-FTQ" id="gbz-Dc-6lY"/>
                         <outlet property="containerViewTopMargin" destination="kiR-AZ-7wr" id="axf-Xa-73f"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
+            <point key="canvasLocation" x="136.80000000000001" y="192.95352323838082"/>
         </scene>
         <!--Sub View Controller-->
         <scene sceneID="Ybd-ih-Sud">
@@ -58,26 +66,70 @@
                         <viewControllerLayoutGuide type="bottom" id="rP8-fW-6ur"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ADa-OH-mZf">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="583"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ApP-X6-0Dj" customClass="RoundView" customModule="ContainerViewTest" customModuleProvider="target">
-                                <rect key="frame" x="159" y="4" width="56" height="9"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QUq-h8-mX7">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.25098040700000002" green="0.25098040700000002" blue="0.25098040700000002" alpha="0.80001495215311003" colorSpace="custom" customColorSpace="sRGB"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadious">
-                                        <real key="value" value="6"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
+                                <subviews>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ApP-X6-0Dj" customClass="RoundView" customModule="ContainerViewTest" customModuleProvider="target">
+                                        <rect key="frame" x="165" y="8" width="44" height="6"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.25098040700000002" green="0.25098040700000002" blue="0.25098040700000002" alpha="0.80001495215311003" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadious">
+                                                <real key="value" value="6"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ne1-4U-Tdm">
+                                <rect key="frame" x="0.0" y="68" width="375" height="515"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.72053557634353638" green="0.93701845407485962" blue="0.93712455034255981" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="scrollView" destination="ne1-4U-Tdm" id="U2W-Dm-dYM"/>
+                        <outlet property="topView" destination="QUq-h8-mX7" id="NZ4-zv-mH7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0MS-5a-fPL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137" y="835"/>
+            <point key="canvasLocation" x="136.80000000000001" y="834.33283358320841"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="NuQ-0V-6ae">
+            <objects>
+                <viewController id="m8l-mZ-Vvi" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LRu-98-hAc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="map.png" translatesAutoresizingMaskIntoConstraints="NO" id="gru-2D-KqX">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="gru-2D-KqX" secondAttribute="bottom" id="BOZ-my-IW8"/>
+                            <constraint firstAttribute="trailing" secondItem="gru-2D-KqX" secondAttribute="trailing" id="XVe-YV-wRE"/>
+                            <constraint firstItem="gru-2D-KqX" firstAttribute="leading" secondItem="LRu-98-hAc" secondAttribute="leading" id="dmP-Sz-n3T"/>
+                            <constraint firstItem="gru-2D-KqX" firstAttribute="top" secondItem="LRu-98-hAc" secondAttribute="top" id="xKw-t8-AVS"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TWG-Hi-KMv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="957.60000000000002" y="63.418290854572717"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="map.png" width="320" height="568"/>
+    </resources>
 </document>
