ドラッグが離れた場所ではなくて、containerviewの位置によって次の移動場所を変えた

--- a/ContainerViewTest/Base.lproj/Main.storyboard
+++ b/ContainerViewTest/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                             <containerView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9JO-nm-as1">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="667" id="si0-ec-D0K"/>
+                                    <constraint firstAttribute="height" constant="667" id="Whg-k3-8Gk"/>
                                 </constraints>
                                 <connections>
                                     <segue destination="S0r-bA-z5s" kind="embed" id="Sda-nn-wd7"/>
@@ -39,18 +39,19 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="9JO-nm-as1" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="D9O-GP-H9t"/>
+                            <constraint firstItem="j4p-gV-snJ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="GG2-hn-2Eh"/>
                             <constraint firstAttribute="trailing" secondItem="9JO-nm-as1" secondAttribute="trailing" id="QEW-UX-BqU"/>
-                            <constraint firstItem="j4p-gV-snJ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="eXS-cN-Cfa"/>
                             <constraint firstAttribute="trailing" secondItem="j4p-gV-snJ" secondAttribute="trailing" id="en6-Yc-Put"/>
                             <constraint firstItem="j4p-gV-snJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="fS3-1c-aNw"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="j4p-gV-snJ" secondAttribute="bottom" id="fmC-hi-MSu"/>
-                            <constraint firstItem="9JO-nm-as1" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="kiR-AZ-7wr"/>
                             <constraint firstItem="9JO-nm-as1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="uQH-4N-mmv"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="containerMapView" destination="j4p-gV-snJ" id="CQu-1S-jiA"/>
                         <outlet property="containerView" destination="9JO-nm-as1" id="lKF-Ut-8x4"/>
-                        <outlet property="containerViewTopMargin" destination="kiR-AZ-7wr" id="axf-Xa-73f"/>
+                        <outlet property="containerViewTopMargin" destination="D9O-GP-H9t" id="IK6-YA-4yK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
